--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -8,6 +8,8 @@ ARG LIB_AOM_VERSION=3.9.1
 ARG LIB_WEBP_VERSION=1.4.0
 ARG LIBJXL_VERSION=0.10.3
 
+COPY libheif-libbrotli.patch /
+
 RUN apt-get -y update && \
     apt-get -y upgrade && \
     apt-get install -y git make gcc pkg-config autoconf curl g++ cmake clang \
@@ -52,7 +54,9 @@ RUN apt-get -y update && \
     rm -rf build_aom && \
     # Building libheif \
     git clone -b v${LIB_HEIF_VERSION} --depth 1 https://github.com/strukturag/libheif.git && \
-    cd libheif/ && mkdir build && cd build && cmake --preset=release .. && make && make install && cd ../../ && \
+    cd libheif/ && \
+    mv /libheif-libbrotli.patch ./ && git apply ./libheif-libbrotli.patch && \
+    mkdir build && cd build && cmake --preset=release .. && make && make install && cd ../../ && \
     ldconfig /usr/local/lib && \
     rm -rf libheif && \
     # Building ImageMagick
