Using macos runner

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Install Docker
+        run: brew cask install docker
       - name: Setup Docker
         uses: ./.github/actions/setup-docker
         with:
