--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -12,12 +12,29 @@ on:
 
 jobs:
   build-ubuntu:
-    runs-on: macos-14
+    runs-on: ubuntu-24.04
     steps:
+      - run: |
+          for pkg in docker.io docker-doc docker-compose docker-compose-v2 podman-docker containerd runc; do sudo apt-get remove $pkg; done
+          # Add Docker's official GPG key:
+          sudo apt-get update
+          sudo apt-get install ca-certificates curl
+          sudo install -m 0755 -d /etc/apt/keyrings
+          sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
+          sudo chmod a+r /etc/apt/keyrings/docker.asc
+
+          # Add the repository to Apt sources:
+          echo \
+            "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \
+            $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
+            sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+          sudo apt-get update
+          
+          sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+          
+          sudo docker run hello-world
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Install Docker
-        run: brew install --cask docker
       - name: Setup Docker
         uses: ./.github/actions/setup-docker
         with:
@@ -60,7 +77,7 @@ jobs:
           path: test-images
       - name: Push Ubuntu image
         id: docker_push_ubuntu
-        # if: ${{ github.event_name == 'release' }}
+        if: ${{ github.event_name == 'release' }}
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -68,6 +85,6 @@ jobs:
           push: false
           load: false
           platforms: linux/amd64,linux/arm64
-          tags: dpokidov/imagemagick:test-ubuntu
+          tags: dpokidov/imagemagick:${{ github.event.release.tag_name }}-ubuntu,dpokidov/imagemagick:latest-ubuntu
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
