--- a/.github/actions/setup-docker/action.yaml
+++ b/.github/actions/setup-docker/action.yaml
@@ -16,6 +16,7 @@ runs:
       uses: docker/setup-buildx-action@v3
     - name: Login to DockerHub
       uses: docker/login-action@v3
+      if: ${{ github.event_name == 'release' }}
       with:
         username: ${{ inputs.docker-user }}
         password: ${{ inputs.docker-password }}
