--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -1,12 +1,12 @@
-FROM ubuntu:noble
+FROM ubuntu:20.04.06
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-ARG IM_VERSION=7.1.1-41
-ARG LIB_HEIF_VERSION=1.19.5
-ARG LIB_AOM_VERSION=3.11.0
-ARG LIB_WEBP_VERSION=1.4.0
-ARG LIBJXL_VERSION=0.11.0
+ARG IM_VERSION=7.1.1-47
+ARG LIB_HEIF_VERSION=1.19.8
+ARG LIB_AOM_VERSION=3.12.1
+ARG LIB_WEBP_VERSION=1.5.0
+ARG LIBJXL_VERSION=0.11.1
 
 RUN apt-get -y update && \
     apt-get -y upgrade && \
