New debian stable, updated GHA versions

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
       - name: Setup Docker
         uses: ./.github/actions/setup-docker
         with:
@@ -24,7 +24,7 @@ jobs:
           docker-password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build Debian Bullseye Image
         id: docker_build_bullseye
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile.bullseye
@@ -53,14 +53,14 @@ jobs:
           docker run --rm -v $(pwd)/test-images:/imgs im-bullseye /imgs/test.jpg -antialias -font DejaVu-Sans -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
           docker run --rm im-bullseye -list configure | grep DELEGATES | grep "fontconfig freetype heic jbig jng jpeg jxl lcms lzma png ps tiff webp x xml zlib"
       - name: Upload Test Results
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
           name: bullseye-tests
           path: test-images
       - name: Push Debian Bullseye image
         id: docker_push_bullseye
         if: ${{ github.event_name == 'release' }}
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile.bullseye
@@ -70,69 +70,69 @@ jobs:
           tags: dpokidov/imagemagick:${{ github.event.release.tag_name }},dpokidov/imagemagick:${{ github.event.release.tag_name }}-bullseye,dpokidov/imagemagick:latest-bullseye,dpokidov/imagemagick:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
-  build-debian-bookworm:
+  build-debian-trixie:
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
       - name: Setup Docker
         uses: ./.github/actions/setup-docker
         with:
           docker-user: ${{ secrets.DOCKERHUB_USERNAME }}
           docker-password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build Debian Bookworm Image
-        id: docker_build_bookworm
-        uses: docker/build-push-action@v5
+      - name: Build Debian trixie Image
+        id: docker_build_trixie
+        uses: docker/build-push-action@v6
         with:
           context: .
-          file: ./Dockerfile.bookworm
+          file: ./Dockerfile.trixie
           push: false
           load: true
-          tags: im-bookworm
+          tags: im-trixie
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
-      - name: Testing Debian Bookworm Image
+      - name: Testing Debian trixie Image
         run: |
-          docker run --rm im-bookworm -list configure
-          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
-          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -resize 500 /imgs/test.jpg avif:/imgs/test-jpg.avif
-          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -resize 100 /imgs/test.png /imgs/test-resize.png
-          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -resize 100 /imgs/test.png webp:/imgs/test-png.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -resize 100 /imgs/test.png avif:/imgs/test-png.avif
-          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -resize 100 /imgs/test.png jxl:/imgs/test-png.jxl
-          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm /imgs/test.pdf /imgs/test-pdf.png
-          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -coalesce /imgs/test.gif /imgs/test-gif.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
-          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
-          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -resize 200 /imgs/test.tiff jxl:/imgs/test-tiff.jxl
-          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm /imgs/test.jpg -antialias -font DejaVu-Sans -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
-          docker run --rm im-bookworm -list configure | grep DELEGATES | grep "fontconfig freetype heic jbig jng jpeg jxl lcms lzma png ps tiff webp x xml zlib zstd"
+          docker run --rm im-trixie -list configure
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -resize 500 /imgs/test.jpg avif:/imgs/test-jpg.avif
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -resize 100 /imgs/test.png /imgs/test-resize.png
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -resize 100 /imgs/test.png webp:/imgs/test-png.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -resize 100 /imgs/test.png avif:/imgs/test-png.avif
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -resize 100 /imgs/test.png jxl:/imgs/test-png.jxl
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie /imgs/test.pdf /imgs/test-pdf.png
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -coalesce /imgs/test.gif /imgs/test-gif.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -resize 200 /imgs/test.tiff jxl:/imgs/test-tiff.jxl
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie /imgs/test.jpg -antialias -font DejaVu-Sans -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
+          docker run --rm im-trixie -list configure | grep DELEGATES | grep "fontconfig freetype heic jbig jng jpeg jxl lcms lzma png ps tiff webp x xml zlib zstd"
       - name: Upload Test Results
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
-          name: bookworm-tests
+          name: trixie-tests
           path: test-images
-      - name: Push Debian Bookworm image
-        id: docker_push_bookworm
+      - name: Push Debian trixie image
+        id: docker_push_trixie
         if: ${{ github.event_name == 'release' }}
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: .
-          file: ./Dockerfile.bookworm
+          file: ./Dockerfile.trixie
           push: true
           load: false
           platforms: linux/amd64,linux/arm64
-          tags: dpokidov/imagemagick:${{ github.event.release.tag_name }}-bookworm,dpokidov/imagemagick:latest-bookworm
+          tags: dpokidov/imagemagick:${{ github.event.release.tag_name }}-trixie,dpokidov/imagemagick:latest-trixie
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
   build-ubuntu:
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
       - name: Setup Docker
         uses: ./.github/actions/setup-docker
         with:
@@ -140,7 +140,7 @@ jobs:
           docker-password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build Ubuntu Image
         id: docker_build_ubuntu
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile.ubuntu
@@ -169,14 +169,14 @@ jobs:
           docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu /imgs/test.jpg -antialias -font DejaVu-Sans -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
           docker run --rm im-ubuntu -list configure | grep DELEGATES | grep "bzlib fontconfig freetype heic jbig jng jpeg jxl lcms lzma png ps tiff webp x xml zlib zstd"
       - name: Upload Test Results
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
           name: ubuntu-tests
           path: test-images
       - name: Push Ubuntu image
         id: docker_push_ubuntu
         if: ${{ github.event_name == 'release' }}
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile.ubuntu
