fix: magick needs input images as a first argument

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -94,20 +94,20 @@ jobs:
       - name: Testing Debian trixie Image
         run: |
           docker run --rm im-trixie -list configure
-          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
-          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -resize 500 /imgs/test.jpg avif:/imgs/test-jpg.avif
-          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -resize 100 /imgs/test.png /imgs/test-resize.png
-          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -resize 100 /imgs/test.png webp:/imgs/test-png.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -resize 100 /imgs/test.png avif:/imgs/test-png.avif
-          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -resize 100 /imgs/test.png jxl:/imgs/test-png.jxl
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie /imgs/test.jpg -resize 500 /imgs/test-resize.jpg
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie /imgs/test.jpg -resize 500 webp:/imgs/test-jpg.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie /imgs/test.jpg -resize 500 avif:/imgs/test-jpg.avif
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie /imgs/test.png -resize 100 /imgs/test-resize.png
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie /imgs/test.png -resize 100 webp:/imgs/test-png.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie /imgs/test.png -resize 100 avif:/imgs/test-png.avif
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie /imgs/test.png -resize 100 jxl:/imgs/test-png.jxl
           docker run --rm -v $(pwd)/test-images:/imgs im-trixie /imgs/test.pdf /imgs/test-pdf.png
           docker run --rm -v $(pwd)/test-images:/imgs im-trixie /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -coalesce /imgs/test.gif /imgs/test-gif.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
-          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
-          docker run --rm -v $(pwd)/test-images:/imgs im-trixie -resize 200 /imgs/test.tiff jxl:/imgs/test-tiff.jxl
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie /imgs/test.gif -coalesce /imgs/test-gif.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie /imgs/test.tiff -resize 200 /imgs/test-resize.tiff
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie /imgs/test.tiff -resize 200 webp:/imgs/test-tiff.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie /imgs/test.tiff -resize 200 avif:/imgs/test-tiff.avif
+          docker run --rm -v $(pwd)/test-images:/imgs im-trixie /imgs/test.tiff -resize 200 jxl:/imgs/test-tiff.jxl
           docker run --rm -v $(pwd)/test-images:/imgs im-trixie /imgs/test.jpg -antialias -font DejaVu-Sans -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
           docker run --rm im-trixie -list configure | grep DELEGATES | grep "fontconfig freetype heic jbig jng jpeg jxl lcms lzma png ps tiff webp x xml zlib zstd"
       - name: Upload Test Results
