--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -180,7 +180,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile.ubuntu
-          push: false
+          push: true
           load: false
           platforms: linux/amd64,linux/arm64
           tags: dpokidov/imagemagick:${{ github.event.release.tag_name }}-ubuntu,dpokidov/imagemagick:latest-ubuntu
